overflow fix to enable vertical scrolling on page :)

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -12,7 +12,7 @@
 }
 
 html {
-  overflow: hidden; /* for iOS and other small screens */
+  overflow-x: hidden; /* for the card shuffle effects */
 }
 
 /* TYPE */
